2021/styles/styles.css
@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Roboto+Slab:300,400,700&subset=latin-ext');

/* generic styles */

body {
    padding: 0;
    margin: 0;
    font-family: Roboto Slab, Helvetica, Arial, sans-serif;
    font-weight: 300;
    font-size: 1.25em;
    background: #242424;
    color: #ddd;
    overflow-anchor: none; /* suppress new scroll anchoring behavior that causes issues with disclosure widgets */
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Nunito Sans', sans-serif;
    color: #fff;
}

h1, h2 {
    font-size: 1.5em;
}

abbr[title], acronym[title] {
    text-decoration: none;
}

cite {
    color:#ffe400;
    font-style: normal;
}

/* inline SVG icons */

svg.icon {
    fill:currentColor; /* for outlined SVGs (otherwise use stroke) */
    width: 1em;
    height: 1em;
    vertical-align: -0.1em; /* tweaks vertical alignment next to text */
}

/* IE11 patch */

header, main, footer, section, nav, main, aside { display: block; }

@media (min-width: 64rem) {

    /* grid layout */

    header, footer  {
        margin: 0;
        display: -ms-grid;
        -ms-grid-columns: minmax(1rem, 1fr) 1rem 4.25rem 1rem 4.25rem 1rem 4.25rem 1rem 4.25rem 1rem 4.25rem 1rem 4.25rem 1rem 4.25rem 1rem 4.25rem 1rem 4.25rem 1rem 4.25rem 1rem 4.25rem 1rem 4.25rem 1rem minmax(1rem, 1fr);
        display: grid;
        grid-template-columns: minmax(1rem, 1fr) repeat(12, 4.25rem) minmax(1rem, 1fr);
        grid-column-gap: 1rem;
    }

    header {
        align-items: end;
    }

    header > *, footer > * {
        -ms-grid-column: 3;
        -ms-grid-column-span: 24;
        grid-column: 2/14;
    }

    header #logo {
        -ms-grid-column: 3;
        -ms-grid-column-span: 10;
        -ms-grid-row: 1;
        grid-column: 2/7;
        grid-row: 1;
    }

    header #mainnav {
        -ms-grid-column: 13;
        -ms-grid-column-span: 27;
        -ms-grid-row: 1;
        grid-column: 8/14;
        grid-row: 1;
        -ms-grid-row-align: end;
    }

    footer {
        align-items: start;
    }

    footer nav#footer-social {
        -ms-grid-column: 9;
        -ms-grid-column-span: 6;
        -ms-grid-row: 1;
        grid-column: 5/8;
        grid-row: 1;
    }

    footer nav#footer-ancilliary {
        -ms-grid-column: 15;
        -ms-grid-column-span: 7;
        -ms-grid-row: 1;
        grid-column: 8/12;
        grid-row: 1;
    }

    footer #logo_hashtag {
        -ms-grid-column: 22;
        -ms-grid-column-span: 4;
        -ms-grid-row: 1;
        grid-column: 12/14;
        grid-row: 1;
    }

    main {
        margin: 0;
        display: -ms-grid;
        -ms-grid-columns: minmax(1rem, 1fr) 62rem minmax(1rem, 1fr);
        display: grid;
        grid-template-columns: minmax(1rem, 1fr) 62rem minmax(1rem, 1fr);
        grid-column-gap: 1rem;
    }

    main > * {
        -ms-grid-column: 2;
        grid-column: 2;
    }
}

/* ugly IE hack for SVG sizing */

@media screen and (min-width:0\0) {
    footer #logo_hashtag svg {
        height: 55px; 
    }
}

/* specific styles */

nav {
  padding-bottom: 1em;
}

nav ul {
  padding-left: 0;
}

nav ul li {
  padding-right: 0.75em;
}

header p {
    color: #999;
    margin: 0;
}

main li {
  margin-bottom: 1em;
}


footer {
    font-size: 1rem;
}

a {
    text-decoration: none;
    border-bottom: rgba(255, 228, 0, 0.5) 1px solid;
}

a, a:link, a:visited {
    color: #ffe400;
}

a:focus, a:hover, a:active {
    background: #ffe400;
    color: #282828;
    padding: 0 2px; /* using px rather than em, as 0.25em / -0.25em seems to have rounding issues leading to subtle sub-pixel dancing */
    margin: 0 -2px;
    outline: none;
}

header {
    background: #ffe400;
    padding-top: 2rem;
    font-family: 'Nunito Sans', sans-serif;
}

header #mainnav {
    text-transform: capitalize;
    font-size: 1.25rem;
    word-spacing: -0.1em;
    text-align: right;
}

header #mainnav ul,
header #mainnav ul li {
    display: inline;
}

header #mainnav a {
    color: #000;
    font-weight: bold;
    text-decoration: none;
}

main {
    padding: 2em 0 4em 0;
}

#supporters {
    text-align: center;
    background-color: #282828;
    border-top: 2px #444 solid;
    padding-bottom: 1em;
}

#supporters ul, #supporters li {
    list-style: none;
    margin: 0;
    padding: 0;
    display: inline;
}

#supporters h3 {
    text-transform: uppercase;
    font-size: 0.75em;
}

#supporters h3 span {
    border-bottom: 1px solid #ffe400;
    padding: 0 1em;
}

#supporters img {
    max-height: 150px;
    max-width: 250px;
    vertical-align: middle;
}

#supporters a {
    text-decoration: none;
    border-bottom: 0;
}

#supporters a:focus,
#supporters a:hover,
#supporters a:active {
    background: none;
}

#supporters a:focus img {
    outline: 2px solid #ffe400;
}

/* supporter perks table */

.supporter-perks {
    width: 100%;
    border-collapse: collapse;
}

@media (max-width: 28em) {
    .supporter-perks {
        display: inline-block;
        width: calc(100vw - 2rem);
        overflow: auto;
    }
}

.supporter-perks thead th {
    color: #ffe400;
}

.supporter-perks th, .supporter-perks td {
    border-bottom: 1px #444 solid;
    padding: 0.5em 0;
    min-width: 3.5em;
}

.supporter-perks th {
    font-weight: 300;
    text-align: left;
    font-size: 0.85em;
}

.supporter-perks thead th {
    text-align: center;
}

.supporter-perks td {
    text-align: center;
}

.supporter-perks tr {
    border-bottom: 1px #888 solid;
}

footer {
    background: #111;
    padding: 2rem 0;
}

footer nav ul,
footer nav ul li {
    list-style: none;
    padding: 0;
    margin: 0;
}

footer nav ul li {
    padding: 0 0 0.25rem 0;
}

header nav a:focus,
header nav a:hover,
header nav a:active {
    border-bottom: 0.25em solid #998000;
}

header nav a[aria-current] {
    border-bottom: 0.25em solid #111;
}

header #mainnav a[aria-current]:focus {
    outline: 2px #998000 solid;
}
/* ... */

